--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vitest-tsconfig-paths": "3.4.1"
   },
   "dependencies": {
+    "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "6.7.1",
     "@prisma/client": "4.11.0",
     "bcryptjs": "2.4.3",
